--- a/src/style/style.less
+++ b/src/style/style.less
@@ -20,6 +20,23 @@ body {margin: 0;background:#f7f7f7;}
 		}
 	}
 }
+.news_list {
+	position: relative;
+	.loading {
+		position: absolute;
+		display: flex;
+		background: rgba(0,0,0,.6);
+		width: 100%;
+		height: 100%;
+		top: 0;left: 0;
+		justify-content: center;
+		align-items: center;
+		color: #fff;
+	}
+	li {
+		padding: 5px 0;
+	}
+}
 
 .detail {
 	word-break: break-all;
